feat: add Docker container setup for pytest
- Added Docker container configuration to GitHub Actions workflow.
- Set up container with image `argnctu/oop:latest`.
- Configured environment variable `NODE_ENV` to `development`.
- Exposed port 80 and mounted volume `my_docker_volume`.
- Limited container to use 1 CPU.
- Added step to check for `.dockerenv` file.

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -39,7 +39,18 @@ jobs:
 
   Run-Pytest-Tests:
     runs-on: ubuntu-latest
+    container:
+      image: argnctu/oop:latest
+      env:
+        NODE_ENV: development
+      ports:
+        - 80
+      volumes:
+        - my_docker_volume:/volume_mount
+      options: --cpus 1
     steps:
+      - name: Check for dockerenv file
+        run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Set up Python 3.8
