feat(workflow): update checkout action and set temp dir perms
- Updated the checkout action from v3 to v4 for better performance and
  security.
- Added a step to set permissions on the temporary directory to ensure
  proper access during the workflow execution.

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -51,8 +51,10 @@ jobs:
     steps:
       - name: Check for dockerenv file
         run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
+      - name: Set permissions on temp directory
+        run: chmod -R 777 /__w/_temp/
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Set up Python 3.8
         uses: actions/setup-python@v5
         with:
