--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Check for dockerenv file
         run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
       - name: Set permissions on temp directory
-        run: chmod -R 777 /__w/_temp/
+        run: sudo chmod -R 777 /__w/_temp/
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Set up Python 3.8
