feat(workflow): add root user option to docker
Added the --user root option to the Docker run command in the GitHub Actions
workflow. This change ensures that the container runs with root privileges,
which may be necessary for certain operations.

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -47,7 +47,10 @@ jobs:
         - 80
       volumes:
         - my_docker_volume:/volume_mount
-      options: --cpus 1
+      options: |
+        --cpus 1
+        --user root
+
     steps:
       - name: Check for dockerenv file
         run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
