feat(workflow): update Docker options in GitHub Actions
Updated the Docker options in the GitHub Actions workflow to include
--user root. This change ensures that the container runs with root
privileges, which is necessary for certain operations.

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -48,7 +48,7 @@ jobs:
       volumes:
         - my_docker_volume:/volume_mount
       options: |
-        --cpus 1
+        --cpus 1 \
         --user root
 
     steps:
