--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -47,9 +47,7 @@ jobs:
         - 80
       volumes:
         - my_docker_volume:/volume_mount
-      options: |
-        --cpus 1 \
-        --user root
+      options: --cpus 1 --user root
 
     steps:
       - name: Check for dockerenv file
